--- a/CSharp/LQ/MJThirdParty.Debug/MJThirdParty.Debug/appsettings.json
+++ b/CSharp/LQ/MJThirdParty.Debug/MJThirdParty.Debug/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "Urls": "http://*:34322",
-
+  "XinBoRuiOptions": {
+    "UserName": "mjkj002",
+    "PassWord": "mjkj002",
+    "Secrect2222": "b9cb3763be2d834b9ea4a19dbcc43c7a",
+    "CtrlServer": "https://serv.51pbox.com/api/"
+  },
   "Direct": {
     "ChannelId": 9991,
     "MerchantNo": "1377717502",
